templates/binaryvision-static-wordpress_template.yaml
---
# Source: binaryvision-static-wordpress/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-binaryvision-static-wordpress
  labels:
    helm.sh/chart: binaryvision-static-wordpress-0.0.4
    app.kubernetes.io/name: binaryvision-static-wordpress
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: binaryvision-static-wordpress
    app.kubernetes.io/instance: release-name
---
# Source: binaryvision-static-wordpress/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-binaryvision-static-wordpress
  labels:
    helm.sh/chart: binaryvision-static-wordpress-0.0.4
    app.kubernetes.io/name: binaryvision-static-wordpress
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: binaryvision-static-wordpress
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: binaryvision-static-wordpress
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-binaryvision-static-wordpress
      securityContext:
        {}
      containers:
        - name: binaryvision-static-wordpress
          securityContext:
            {}
          image: "phntom/binaryvision-static-wordpress:0.0.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-production
---
# Source: binaryvision-static-wordpress/templates/ingress-nix.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nix-co-il-redirect
  annotations:
    acme.kubernetes.io/enable: "true"
    acme.kubernetes.io/dns: "dns_cf"
    nginx.ingress.kubernetes.io/permanent-redirect: https://kix.co.il/signup_user_complete/?id=hiyeztycyidz9ja4gx6bw18p3h
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location = /robots.txt {
        add_header Content-Type text/plain;
        return 200 "User-agent: *\nDisallow: /\n";
      }

spec:
  tls:
    - hosts:
        - nix.co.il
        - join.nix.co.il
        - www.nix.co.il
        - web.nix.co.il
        - webchat.nix.co.il
        - chat.kix.co.il
      secretName: nix-co-il-redirect-tls
  rules:
    - host: join.nix.co.il
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: webchat.nix.co.il
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: chat.kix.co.il
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
---
# Source: binaryvision-static-wordpress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: release-name-binaryvision-static-wordpress
  labels:
    helm.sh/chart: binaryvision-static-wordpress-0.0.4
    app.kubernetes.io/name: binaryvision-static-wordpress
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.kubernetes.io/dns: dns_cf
    acme.kubernetes.io/enable: "true"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "binaryvision.minthe.kix.co.il"
        - "www.binaryvision.co.il"
        - "binaryvision.co.il"
        - "www.binaryvision.org.il"
        - "binaryvision.org.il"
      secretName: binaryvision-static-tls
  rules:
    - host: "binaryvision.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: "www.binaryvision.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: "binaryvision.org.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: "www.binaryvision.org.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
    - host: "binaryvision.minthe.kix.co.il"
      http:
        paths:
          - path: /
            backend:
              serviceName: release-name-binaryvision-static-wordpress
              servicePort: 80
---
# Source: binaryvision-static-wordpress/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-binaryvision-static-wordpress-test-connection"
  labels:
    helm.sh/chart: binaryvision-static-wordpress-0.0.4
    app.kubernetes.io/name: binaryvision-static-wordpress
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-binaryvision-static-wordpress:80']
  restartPolicy: Never
